# rambo-I

./: .bumpversion.cfg  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  app.py  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
data/: suzuki-miyaura.csv
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/rambo/: __init__.py  __main__.py  cli.py  version.py
src/rambo/modules/: __init__.py  modules.py
src/rambo/rag/: __init__.py
src/rambo/signatures/: __init__.py  signatures.py
src/rambo/tools/: __init__.py  bo_initialization.py  retrieve.py
src/rambo/tools/bayesian_optimization/: __init__.py  bo_initialization.py  design_space.py
src/rambo/tools/retrieval/: __init__.py  dummy_retriever.py  embedding.py  retrieve.py
src/rambo/utils/: __init__.py  dspy_utils.py  embedding.py
src/rambo/vdb_generation/: README.md  create_vdb.py  environment.yml
tests/: __init__.py  test_boinit.py  test_version.py
